# openg7-org/src/app/core/api/strapi.routes.ts
@@ -17,6 +17,7 @@ export const STRAPI_ROUTES = {
     meProfileEmailChange: '/api/users/me/profile/email-change',
     meFavorites: '/api/users/me/favorites',
     meOpportunityOffers: '/api/users/me/opportunity-offers',
+    meOpportunityOfferAttachments: '/api/users/me/opportunity-offer-attachments',
     meSavedSearches: '/api/users/me/saved-searches',
     meAlerts: '/api/users/me/alerts',
   },
